plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ngo'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-validation'


    // OpenPDF
    implementation 'com.github.librepdf:openpdf:1.3.30'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Load .env file into bootRun environment
bootRun {
    def envFile = file("${rootDir}/.env")
    if (envFile.exists()) {
        envFile.readLines().each { line ->
            def trimmed = line.trim()
            if (trimmed && !trimmed.startsWith('#')) {
                def idx = trimmed.indexOf('=')
                if (idx > 0) {
                    def key = trimmed.substring(0, idx).trim()
                    def value = trimmed.substring(idx + 1).trim()
                    environment(key, value)
                }
            }
        }
    }
}
